k8s/init-services/05-api-gateway-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
  name: api-gateway
  namespace: spring-petclinic
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    app: api-gateway
  type: LoadBalancer
status:
  loadBalancer: {}
