k8s/init-services/06-customers-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: customers-service
  name: customers-service
  namespace: spring-petclinic
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    app: customers-service
status:
  loadBalancer: {}
